--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
         
     }
     .main {
-        background-image: url("img/background/boran2.png"); /* Background image */
+        background-image: url("img/background/skyshop.png"); /* Background image */
         background-repeat: no-repeat; /* Prevent repeating of the image */
         background-size: cover; /* Scale the image to cover the entire background */
         background-position: center center; /* Center the image vertically and horizontally */
@@ -37,10 +37,11 @@
 
 /* menu wrapper item ---------------------------------------------- */
     .menu-wrapper {
+        position: relative;
+        top: 150px;
+        bottom: 0px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-        padding: 20px;
     }
 
     .card {
@@ -280,14 +281,12 @@
 /* info----------------------------------------------- */
 /* General styles for the info section */
 .info {
+    display: none;
     border: solid 5px rgb(5, 42, 90);
-    display: block;
     position: relative;  /* Keeps the info section fixed at the bottom */
-    bottom: 0;  /* Stick it to the bottom */
-    left: 0;
     width: 100%;  /* Full width of the viewport */
     text-align: center;
-    background-image: url(img/background/boran4x.png);  /* Background image */
+    background-image: url(img/background/skyshop.png);  /* Background image */
     background-size: cover;  /* Cover the entire section */
     background-position: center center;  /* Center the background image */
     color: white;  /* White text */
@@ -329,7 +328,7 @@
 
 /* Title styling */
 .info h2 {
-    background-color: rgba(37, 37, 37, 0.397);
+    background-color: rgba(37, 37, 37, 0.582);
     font-size: 1.3rem;
     margin-bottom: 15px;
     color: #ffffff;
